--- a/index.html
+++ b/index.html
@@ -51,12 +51,18 @@
 .cs .col-md-3 {
 	margin: 0;
 	padding: 0;
+	background: #efefef;
+	border-bottom: 0px;
+}
+.cs .col-md-3 .row:first-child ul.nav-tabs li a {
+	line-height: 17px;
 }
 .cs .col-md-3 .row:first-child ul.nav-tabs li.active a {
 	width: 39px;
+	line-height: 18px;
 	border-left: 0px;
 	border-top: 0px;
-	border-bottom: 0px;
+	border-bottom: 1px solid #fff;
 	border-radius: 0px;
 }
 </style>
