--- a/app.html
+++ b/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="RDash">
+<html lang="en" ng-app="CloudSM">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,9 +8,11 @@
   <link rel="stylesheet" href="css/main.min.css"/>
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"/>
   <!-- SCRIPTS -->
+  <!-- Angular JS main min -->
   <script src="js/main.min.js"></script>
+  <!-- CloudSM app -->
+  <script src="js/dashboard.min.js"></script>
   <!-- Custom Scripts -->
-  <script type="text/javascript" src="js/dashboard.min.js"></script>
 </head>
 <body ng-controller="MasterCtrl">
   <div id="page-wrapper" ng-class="{'open': toggle}" ng-cloak>
@@ -69,7 +71,7 @@
 
         <!-- Header Bar -->
         <div class="row header">
-          <div class="col-xs-12">
+          <div class="col-xs-9">
             <div class="user pull-right">
               <div class="item dropdown">
                 <a href="#" class="dropdown-toggle">
@@ -156,11 +158,45 @@
               </div>
             </div>
           </div>
+          <div class="col-xs-3">
+          	<div role="tabpanel">
+          	<!-- Navytabs -->
+          	<ul class="nav nav-tabs" role="tablist">
+          	    <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">
+          	    <i class="fa fa-cog"></i>
+          	    </a></li>
+          	    <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">
+          	    <i class="fa fa-cog"></i>
+          	    </a></li>
+          	    <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">
+          	    <i class="fa fa-cogs"></i> 
+          	    </a></li>
+          	    <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">
+          	    <i class="fa fa-terminal"></i>
+          	    </a></li>
+          	</ul>
+
+          	<!-- Tab panes -->
+          	
+          	</div>
+          </div>
         </div>
         <!-- End Header Bar -->
 
         <!-- Main Content -->
-        <div ui-view></div>
+        <div class="row">
+        	<div class="col-xs-9"></div>
+        	<div class="col-xs-3 white">
+          	<div role="tabpanel">
+				<div class="tab-content">
+					<div role="tabpanel" class="tab-pane active" id="home">...</div>
+					<div role="tabpanel" class="tab-pane" id="profile">...</div>
+					<div role="tabpanel" class="tab-pane" id="messages">...</div>
+					<div role="tabpanel" class="tab-pane" id="settings">...</div>
+				</div>
+        	</div>
+        	</div>
+        </div>
 
       </div><!-- End Page Content -->
     </div><!-- End Content Wrapper -->
