Info tab updated

--- a/app.html
+++ b/app.html
@@ -97,7 +97,68 @@
 					<!-- Infotab -->
 					<div class="row">
 					<div class="col-md-6">JW Test Instance <span class="label label-default">instance ID</span><br/><small>Instance type: t2.micro</small><br/><small>Data center: us-east-1b</small></div>
-						<div class="col-md-6"></div>
+					<div class="col-md-6">RUNNING<br/><small>2014-12-16 T 08:31:33.000Z</small><br/>Region: us-east-1</div>
+					</div>
+					<div class="row">
+						<div class="col-md-6">
+							<div class="row"><h1>78%</h1></div>
+							<div class="row">Avg CPU Usage</div>
+						</div>
+						<div class="col-md-6">
+							<div class="row"><h1>18%</h1></div>
+							<div class="row">Avg MEM Usage</div>
+						</div>
+					</div>
+					<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+					  <div class="panel panel-default">
+					    <div class="panel-heading" role="tab" id="headingOne">
+					      <h4 class="panel-title">
+						<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+					    Network information
+						</a>
+					      </h4>
+					    </div>
+					    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+					      <div class="panel-body">
+					      <small class="label label-primary">Private IP Address</small><br>
+					      202.13.222.123
+					      <small class="label label-primary">Private IP Address</small><br>
+					      202.13.222.123
+					      <small class="label label-primary">Private IP Address</small><br>
+					      202.13.222.123
+					      <small class="label label-primary">Private IP Address</small><br>
+					      202.13.222.123
+					      </div>
+					    </div>
+					  </div>
+					  <div class="panel panel-default">
+					    <div class="panel-heading" role="tab" id="headingTwo">
+					      <h4 class="panel-title">
+						<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+						Security Information
+						</a>
+					      </h4>
+					    </div>
+					    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+					      <div class="panel-body">
+						Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch.
+					      </div>
+					    </div>
+					  </div>
+					  <div class="panel panel-default">
+					    <div class="panel-heading" role="tab" id="headingThree">
+					      <h4 class="panel-title">
+						<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+						Advanced information
+						</a>
+					      </h4>
+					    </div>
+					    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+					      <div class="panel-body">
+						Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. 
+					      </div>
+					    </div>
+					  </div>
 					</div>
 					<!-- Infotab -->
 				</div>
