--- a/app.html
+++ b/app.html
@@ -114,20 +114,33 @@
 					    <div class="panel-heading" role="tab" id="headingOne">
 					      <h4 class="panel-title">
 						<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-					    Network information
+					    Network interface
 						</a>
 					      </h4>
 					    </div>
 					    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 					      <div class="panel-body">
-					      <small class="label label-primary">Private IP Address</small><br>
-					      202.13.222.123
-					      <small class="label label-primary">Private IP Address</small><br>
-					      202.13.222.123
-					      <small class="label label-primary">Private IP Address</small><br>
-					      202.13.222.123
-					      <small class="label label-primary">Private IP Address</small><br>
-					      202.13.222.123
+					      <div class="well">
+					      <small>Note: Short description or warning or whatever blah blah blah.</small>
+					      </div>
+					      <table class="table table-bordered">
+					      	<tr>
+					      		<td>Private</td>
+					      		<td>Public</td>
+					      	</tr>
+					      	<tr>
+					      		<td><small class="label label-default label-sm">IP:</small> 202.xx.xxx.xxx</td>
+					      		<td><small class="label label-default label-sm">IP:</small> 210.91.140.168</td>
+					      	</tr>
+					      	<tr>
+					      		<td><small class="label label-default label-sm">Elastic IP:</small> 202.xx.xxx.xxx</td>
+					      		<td><small class="label label-default label-sm">Secondary IP:</small> 192.168.1.99</td>
+					      	</tr>
+					      	<tr>
+					      		<td><small class="label label-default label-sm">DNS:</small> 202.xx.xxx.xxx</td>
+					      		<td><small class="label label-default label-sm">DNS:</small> xxx.xxx.xxx.xxx</td>
+					      	</tr>
+					      </table>
 					      </div>
 					    </div>
 					  </div>
