Scheduled events section updated

--- a/app.html
+++ b/app.html
@@ -83,7 +83,7 @@
           	    <i class="fa fa-cog"></i>
           	    </a></li>
           	    <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">
-          	    <i class="fa fa-cog"></i>
+          	    <i class="fa fa-calendar"></i>
           	    </a></li>
           	    <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">
           	    <i class="fa fa-cogs"></i> 
@@ -175,7 +175,92 @@
 					</div>
 					<!-- Infotab -->
 				</div>
-				<div role="tabpanel" class="tab-pane" id="profile">Calendar</div>
+				<div role="tabpanel" class="tab-pane" id="profile">
+				<div class="row">
+				<div class="col-md-12">
+					<h5>Manage parking calendar</h5>
+				</div>
+				</div>
+				<div class="row">
+					<div class="col-md-12">
+					      <table class="table table-bordered">
+					      	<tr>
+					      		<td>Parking calendar</td>
+					      		<td class="action"><a href="" class="btn btn-warning btn-xs"><i class="fa fa-plus"></i></a></td>
+					      	</tr>
+					      	<tr class="well">
+					      		<td colspan="2">There is no parking calendar assigned yet </td>
+					      	</tr>
+					      </table>
+					</div>
+					<div class="col-md-12">
+					      <table class="table table-bordered">
+					      	<tr>
+					      		<td>Assigned parking calendar</td>
+					      		<td class="action"><a href="" class="btn btn-success btn-xs"><i class="fa fa-exchange"></i></a></td>
+					      	</tr>
+					      	<tr class="well">
+					      		<td colspan="2">
+					      		<div class="row no-padding">
+					      			<div class="col-md-12">
+					      				<strong>Parking calendar name</strong>
+					      			</div>
+					      		</div>
+					      		</td>
+					      	</tr>
+					      	<tr class="well">
+					      		<td colspan="2">
+					      		<div class="row no-padding">
+					      			<div class="col-md-6">
+					      				Total hours:<br/><h1>40</h1>
+					      			</div>
+					      			<div class="col-md-6">
+					      				Total cost:<br/><h1>$50</h1>
+					      			</div>
+					      		</div>
+					      		</td>
+					      	</tr>
+					      	<tr class="well">
+					      		<td colspan="2">
+					      		Show graphc here
+					      		</td>
+					      	</tr>
+					      </table>
+					</div>
+				</div>
+				<div class="row">
+				<div class="col-md-12">
+					<h5>Manage scheduled run time</h5>
+				</div>
+				</div>
+				
+				<div class="row">
+					<div class="col-md-12">
+					      <table class="table table-bordered">
+					      	<tr>
+					      		<td>Scheduled run time</td>
+					      		<td class="action"><a href="" class="btn btn-warning btn-xs"><i class="fa fa-plus"></i></a></td>
+					      	</tr>
+					      	<tr class="well">
+					      		<td colspan="2">There is no sechduled run time assigned yet </td>
+					      	</tr>
+					      </table>
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col-md-12">
+						
+					<div>
+				</div>
+
+				<div class="row">
+				<div class="col-md-12">
+					<h5>Manage cron jobs</h5>
+				</div>
+				</div>
+
+				</div>
 				<div role="tabpanel" class="tab-pane" id="messages">RTS</div>
 				<div role="tabpanel" class="tab-pane" id="settings">...</div>
 			</div>
