--- a/app.html
+++ b/app.html
@@ -100,7 +100,21 @@
 					<h5>General info</h5>
 				</div>
 				</div>
-
+				<div class="row">
+					<div class="col-sm-2">L</div>
+					<div class="col-sm-10">
+						Instance name<br>
+						created date : 01/01/0001
+					</div>
+				</div>
+				<div class="row">
+				<div class="col-md-12">
+					<div class="panel panel-default">
+						<div class="panel-heading">Server specifications</div>
+						<div class="panel-body"></div>
+					</div>
+				</div>
+				</div>
 					<div class="row">
 					<div class="col-md-6">JW Test Instance <span class="label label-default">instance ID</span><br/><small>Instance type: t2.micro</small><br/><small>Data center: us-east-1b</small></div>
 					<div class="col-md-6">RUNNING<br/><small>2014-12-16 T 08:31:33.000Z</small><br/>Region: us-east-1</div>
@@ -199,6 +213,29 @@
 					      	</tr>
 					      </table>
 					</div>
+					<div class="col-md-12">
+					      <table class="table table-bordered">
+					      	<tr>
+					      		<td>Parking calendar</td>
+					      		<td class="action"><a href="" class="btn btn-warning btn-xs"><i class="fa fa-plus"></i></a></td>
+					      	</tr>
+					      	<tr class="well">
+					      		<td colspan="2">
+					      		<select>
+					      			<option>Parking calendar A</option>
+					      			<option>Parking Calendar B</option>
+					      			<option>Parking calendar C</option>
+					      			<option>Parking calendar D</option>
+					      			<option>Parking calendar E</option>
+					      		</select>
+					      		</td>
+					      	</tr>
+					      	<tr class="well">
+					      		<td colspan="2"><a href="" class="btn btn-primary btn-xs">save</a></td>
+					      	</tr>
+					      </table>
+					</div>
+
 					<div class="col-md-12">
 					      <table class="table table-bordered">
 					      	<tr>
